--- a/step5.html
+++ b/step5.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,viewport-fit=cover">
-        <title>第五步：自动还原魔方</title>
+        <title>第五步：层先法自动还原魔方</title>
         <script type="text/javascript" src="./lib/three.js"></script>
         <script type="text/javascript" src="./lib/three-orbit-controls.js"></script>
         <style type="text/css">
