kociemba算法相关资源提交

--- a/step6.html
+++ b/step6.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>第六步：二阶段算法自动还原魔方</title>
 	<script type="text/javascript" src="./lib/three.js"></script>
+	<script type="text/javascript" src="./lib/kociemba.js"></script>
 	<script type="text/javascript" src="./lib/three-orbit-controls.js"></script>
 	<style type="text/css">
 		div#canvas-frame {
