--- a/step3.html
+++ b/step3.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>第三步：操控魔方视角</title>
-        <script type="text/javascript" src="./lib/three.js"></script>
-        <script type="text/javascript" src="./lib/three-orbit-controls.js"></script>
+        <script type="text/javascript" src="./threejs/three.js"></script>
+        <script type="text/javascript" src="./threejs/controls/OrbitControls.js"></script>
+        <link rel="stylesheet" href="./reset.import.css">
         <style type="text/css">
             div#canvas-frame {
                 cursor: pointer;
@@ -20,6 +21,7 @@
             var renderer;//渲染器
             var width;//页面宽度
             var height;//页面高度
+            var origPoint = new THREE.Vector3(0, 0, 0);//原点
 
             window.requestAnimFrame = (function() {//如果有变化则可能还需要requestAnimationFrame刷新
                 return window.requestAnimationFrame ||
@@ -46,20 +48,12 @@
             var controller;//视角控制器
             function initCamera() {
                 camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
-                camera.position.x = 0;
-                camera.position.y = 0;
-                camera.position.z = 600;
-                camera.up.x = 0;//正方向
-                camera.up.y = 1;
-                camera.up.z = 0;
-                camera.lookAt({
-                    x : 0,
-                    y : 0,
-                    z : 0
-                });
+                camera.position.set(0, 0, 600);
+                camera.up.set(0, 1, 0);//正方向
+                camera.lookAt(origPoint);
                 //视角控制
                 controller = new THREE.OrbitControls(camera, renderer.domElement);
-                controller.target = new THREE.Vector3(0, 0, 0);//设置控制点
+                controller.target = origPoint;//设置控制点
             }
 
             //创建场景，后续元素需要加入到场景中才会显示出来
@@ -114,8 +108,7 @@
                                 map: texture
                             }));
                         }
-                        var cubemat = new THREE.MeshFaceMaterial(materials);
-                        var cube = new THREE.Mesh( cubegeo, cubemat );
+                        var cube = new THREE.Mesh( cubegeo, materials );
                         //假设整个魔方的中心在坐标系原点，推出每个小正方体的中心
                         cube.position.x = (x+len/2)+(j%3)*len;
                         cube.position.y = (y-len/2)-parseInt(j/3)*len;
@@ -158,7 +151,6 @@
             	cubes = SimpleCube(cubeParams.x,cubeParams.y,cubeParams.z,cubeParams.num,cubeParams.len,cubeParams.colors);
             	for(var i=0;i<cubes.length;i++){
             		var item = cubes[i];
-            		/* something */
             		scene.add(cubes[i]);//并依次加入到场景中
             	}
             }
