--- a/step6.html
+++ b/step6.html
@@ -4,13 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,viewport-fit=cover">
         <title>第六步：二阶段算法自动还原魔方</title>
-        <script type="text/javascript" src="./lib/three.js"></script>
-        <script type="text/javascript" src="./lib/three-orbit-controls.js"></script>
+        <script type="text/javascript" src="./threejs/three.js"></script>
+        <script type="text/javascript" src="./threejs/controls/OrbitControls.js"></script>
+        <link rel="stylesheet" href="./reset.import.css">
         <style type="text/css">
-        	body{
-        		margin:0;
-        		padding:0;
-        	}
             div#canvas-frame {
                 cursor: pointer;
                 width:100%;
@@ -522,12 +519,8 @@
             var viewCenter = new THREE.Vector3( 0, 0, 0 );
             function initCamera() {
                 camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
-                camera.position.x = 0;
-                camera.position.y = 0;
-                camera.position.z = 600;
-                camera.up.x = 0;//正方向
-                camera.up.y = 1;
-                camera.up.z = 0;
+                camera.position.set(0, 0, 600);
+                camera.up.set(0, 1, 0);//正方向
                 camera.lookAt(viewCenter);
             }
 
@@ -572,8 +565,7 @@
                                 map: texture
                             }));
                         }
-                        var cubemat = new THREE.MeshFaceMaterial(materials);
-                        var cube = new THREE.Mesh( cubegeo, cubemat );
+                        var cube = new THREE.Mesh( cubegeo, materials );
                         //假设整个魔方的中心在坐标系原点，推出每个小正方体的中心
                         cube.position.x = (x+len/2)+(j%3)*len;
                         cube.position.y = (y-len/2)-parseInt(j/3)*len;
